<resources>
    <string name="app_name">Faith</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_posts">Mijn posts</string>
    <string name="posts">Posts</string>
    <string name="create_post">Nieuwe post</string>
    <string name="post_text">Tekst</string>
    <string name="post_add_image">Afbeelding toevoegen</string>
    <string name="post_urls">Links</string>
    <string name="save">Opslaan</string>
    <string name="create_comment">Commentaar</string>
    <string name="mark_as_favorite">Favoriet</string>
    <string name="favorites">Favorieten</string>
    <string name="fun_fact">Fun fact</string>
    <string name="next">Volgende</string>
    <string name="react">Reageer</string>

    <string name="choose_profile_picture">Kies profielfoto</string>

    <string name="edit">Wijzig</string>
    <string name="edit_comment">Comment wijzigen</string>
    <string name="delete">Verwijder</string>
    <string name="reactions">Reacties</string>


    <string name="account">Account</string>
    <string name="com_auth0_scheme">app</string>
    <string name="login_scopes">openid profile email read:current_user update:current_user_metadata</string>
    <string name="login_audience">https://%1$s/api/v2/</string>

    <string name="edit_user_name">Wijzig naam</string>

    <!-- Title -->
    <string name="initial_title">Welcome to the app!</string>
    <string name="logged_in_title">You\'re logged in.</string>
    <string name="logged_out_title">You\'re logged out.</string>

    <!-- "Log in" and "Log out" buttons -->
    <string name="button_login">Log in</string>
    <string name="button_logout">Log out</string>

    <!-- User profile -->
    <string name="user_profile">
        Name: %1$s\n
        Email: %2$s
    </string>

    <!-- Metadata -->
    <string name="textview_metadata_heading">Metadata</string>
    <string name="textview_metadata_info">Use the text box and buttons below to get and set the \'country\' field in the user\'s metadata.</string>

    <!-- "Get" and "Set" buttons -->
    <string name="button_get">Get</string>
    <string name="button_set">Set</string>

    <!-- SnackBar messages-->
    <string name="login_success_message">Successfully logged in! %1$s</string>
    <string name="login_failure_message">Failed to log in. %1$s</string>
    <string name="general_failure_with_exception_code">Failed - exception code: %1$s</string>
    <string name="general_success_message">Success!</string>
    <string name="menu_title">Menu</string>
    <string name="reactions_title">Reacties</string>
    <string name="create_post_title">Nieuwe post</string>
    <string name="post_detail_title">Details</string>
    <string name="posts_title">Posts</string>
    <string name="choose_image_option">Kies optie</string>
    <string name="gallery">Bestaande foto</string>
    <string name="camera">Camera</string>
</resources>