<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="createPostViewModel"
            type="com.example.android.faith.post.create.CreatePostViewModel" />
        <variable
            name="postViewModel"
            type="com.example.android.faith.post.list.PostListViewModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".post.create.CreatePostFragment">

        <TextView
            android:id="@+id/label_post_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_text"
            app:layout_constraintBottom_toTopOf="@+id/text_post_text"
            app:layout_constraintStart_toStartOf="@+id/text_post_text" />

        <EditText
            android:id="@+id/text_post_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/post_text"
            android:inputType="textMultiLine"
            android:labelFor="@id/label_post_text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:postText="@{createPostViewModel.post}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/links"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_post_text"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/links"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_post_text"
            app:image="@{createPostViewModel.post.post.image}"/>

        <Button
            android:id="@+id/button_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_add_image"
            app:layout_constraintBottom_toTopOf="@+id/links"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image" />

        <EditText
            android:id="@+id/text_url_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:labelFor="@id/label_urls"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/links"
            app:layout_constraintStart_toStartOf="@+id/links"
            app:layout_constraintTop_toBottomOf="@+id/links" />

        <TextView
            android:id="@+id/label_urls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_urls"
            app:layout_constraintBottom_toTopOf="@+id/links"
            app:layout_constraintStart_toStartOf="@+id/links" />

        <Button
            android:id="@+id/button_add_link"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="+"
            app:layout_constraintBottom_toBottomOf="@+id/text_url_text"
            app:layout_constraintStart_toEndOf="@+id/text_url_text"
            app:layout_constraintTop_toBottomOf="@+id/links"
            />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_url_text"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>